# particle-lasso

./: .gitignore  CMakeLists.txt  README.md  particle_idx_frag.glsl  particle_idx_plugin.cpp  particle_idx_vert.glsl
cmake/: FindLAStools.cmake
include/: import_las.h  import_xyz.h  types.h
lasso/: CMakeLists.txt  import_cosmic_web.cpp  import_las.cpp  import_las.h  import_pkd.cpp  import_pkd.h  import_scivis16.cpp  import_scivis16.h  import_uintah.cpp  import_uintah.h  import_xyz.cpp  import_xyz.h  particle_lasso.cpp  particle_lasso.h  particle_lasso_cfg.h.in  tinyxml2.h  types.cpp  types.h
ospray_sg/: CMakeLists.txt  particle_lasso_module.cpp
src/: CMakeLists.txt  import_cosmic_web.cpp  import_cosmic_web.h  import_gromacs.cpp  import_gromacs.h  import_las.cpp  import_las.h  import_libbat_bpf.cpp  import_libbat_bpf.h  import_pkd.cpp  import_pkd.h  import_scivis16.cpp  import_scivis16.h  import_uintah.cpp  import_xyz.cpp  import_xyz.h  particle_idx.cpp  particle_lasso.cpp  particle_lasso.h  point_to_duong_vtu.cpp  point_to_raw.cpp  types.cpp  types.h
vislight_plugin/: CMakeLists.txt  particle_idx.cpp
